# pinball-nucleo

./: .clang-format  .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  build.sh  compile_commands.json  pinball-nucleo Debug.launch  pinball-nucleo.ioc  readme.md
.github/workflows/: build_target_firmware.yml  build_target_firmware_alpine.yml  cmake.yml
Core/Inc/: app.h  ballshooter.h  bumper.h  coil.h  events.h  iodef.h  kicker.h  log.h  main.h  slingshot.h  switch.h  target.h
Core/Src/: app.cpp  ballshooter.cpp  bumper.cpp  coil.cpp  gpio.c  kicker.cpp  log.cpp  main.cpp  slingshot.cpp  switch.cpp  target.cpp  tim.c  usart.c
Drivers/STM32F0xx_HAL_Driver/Inc/: stm32f0xx_hal_gpio.h
Drivers/STM32F0xx_HAL_Driver/Src/: stm32f0xx_hal_uart.c
cmake/: STM32F030R8TX_FLASH.ld  arm_arch.cmake  arm_none_eabi_gcc.cmake
